--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,63 @@
-/*This is a css style sheet for 9/2 homework */
 *{
-    /* font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif; */
+    box-sizing:border-box;
+}
+
+#wrapper{
     /* border-style:solid; */
-    padding:0;
+    
+    
+    padding:20px;
+    margin:50px;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color:#777777;
+    margin-bottom:0px;
+    
+}
+
+#content{
+    background-color:white;
+    background-image: url("../images/hotel-wallpaper.png");
+    background-repeat:  round;
+    padding: 20px;
+    margin: 20px;
+    margin-top:0px;
+    margin-bottom:0px;
+    border-top-style:solid;
+    border-top-color:#777777;
+    border-top-width:1px;
+}
+#content_box{
+    width:850px;
+    background-color:white;
+    padding: 20px;
+    margin: 20px;
+    /* border-style:solid; */
+}
+#about_me{
+    color:#4aaaa5;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    font-size:20px;
+}
+#bio_pic{
+    width:100px;
+    float:left;
+    padding: 10px;
+    padding-left:0px;
+}
+#horizontal_line{
+    color:#777777;
+    color:red;
+}
+#header{
+    width 960px;
+    background-color:white;
+    border-style:solid;
+    float:left;
     margin:0;
-    box-sizing: border-box;
-
+    
 }
-
-body{
-    border-style:solid;
-    width:960px;
-    /* display:flex;
-    align-content:row;
-    justify-content:center; */
-
-}
-#top_bar{
-    border-style:solid;
-    width:100%;
-    height:50px;
-
-}
-
 #my_name{
+    float:left;
     width:20%;
     height:50px;
     font-size:10px;
@@ -31,95 +65,62 @@ body{
     background-color:#4aaaa5;
     float:left;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
-    display:flex;
+    /* display:flex;
     flex-direction:row;
     justify-content:center;
     flex-direction:column;
     justify-content:center;
-    align-content:space-around;
+    align-content:space-around; */
     /* padding-left:20px; */
     text-align:center;
 }
-
+#top_bar{
+    /* border-style:solid; */
+    width:100%;
+    height:50px;
+    background-color:white;
+    margin-left:60px;
+    margin-bottom:0px;
+}
 #header_space{
-    width:50%;
-    border-style:solid;
+    width:40%;
+    /* border-style:solid; */
     float:left;
 }
-
-/* .clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-} */
-
 #links{
     width:30%;
-    border-style:solid;
+    padding-top:5px;
+    /* border-style:solid; */
     float:right;
+    text-align:
 }
-#main_section{
-    float:left;
-
+a{
+    color:#777777;
 }
+a:link {
+    text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  a:active {
+    text-decoration: underline;
+  }
 
-#bio_pic{
-    width:100px;
-    float:left;
-
-}
-#bio_text{
-    float:right;tr54
-}
-
-#footer{
+  #footer{
     border-top: 8px solid #4aaaa5;
-} 
-/* .container{
-    width:1024px;  
-    padding:20px;
-    margin:0 auto;
+    background-color:#666666;
+    display:flex;
+    justify-content:center;
+    padding-bottom:1px;
+    color:white;
+    font-size:10px;
+    margin-top:0px;
+    margin-left:20px;
 }
-
-body{
-    background-color:#efeee7;
-    font-family:"Georgia","Times New Roman",Times,serif;
-    color:#333333;
-    padding: 0;
-    margin:0; 
-}
-
-header{
-    background-color:#333333;
-}
-
-h1{
-    color:#eee;
-    font-size:28px;
-    padding:10px;
-    margin-left:40%;
-}
-h2{
-    font-size:24px;
-    
-}
-#main-bio{
-    float:left;
-    width:70%
-}
-
-#contact-info{
-    float:left;
-    width:30%;
-    line-height:150%;
-}
-a {
-    color:#d21034;
- 
-}
-#bio-image{
-    float:left;
-    width:200px;
-    margin-right:20px;
-
-} */
