--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
 }
 
 #content{
-    background-color:white;
+    background-color:#ffffff;
     background-image: url("../images/hotel-wallpaper.png");
     background-repeat:  round;
     padding: 20px;
@@ -28,7 +28,7 @@
 }
 #content_box{
     width:850px;
-    background-color:white;
+    background-color:#ffffff;
     padding: 20px;
     margin: 20px;
     /* border-style:solid; */
@@ -49,7 +49,7 @@
     color:red;
 }
 #header{
-    width 960px;
+    width: 960px;
     background-color:white;
     border-style:solid;
     float:left;
@@ -92,7 +92,7 @@
     padding-top:5px;
     /* border-style:solid; */
     float:right;
-    text-align:
+    
 }
 a{
     color:#777777;
@@ -123,4 +123,25 @@ a:link {
     font-size:10px;
     margin-top:0px;
     margin-left:20px;
+}
+
+label{
+    margin-bottom:5px;
+}
+
+input{
+    margin-top:10px;
+    margin-bottom:10px;
+    width:810px;
+}
+
+#message{
+    height:100px;
+}
+
+#submit{
+    width:100px;
+    height:35px;
+    color:white;
+    background-color:#4aaaa5;
 }
